fix #3522 Fix edit icon not showing issue in dropdown bookmark select

--- a/src/client/components/tree-list/tree-list.styl
+++ b/src/client/components/tree-list/tree-list.styl
@@ -3,10 +3,11 @@
   display none
   margin-left 3px
   width 16px
-  line-height 26px
-  height 20px
+  line-height 30px
+  height 26px
 .tree-item
   display flex
+  position relative
   line-height 26px
   padding-left 5px
   border-radius 3px
